<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcin_k.gui_development.view.LoginActivity"
    android:background="@drawable/bg_blue"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80sp"
        android:layout_height="80sp"

        android:contentDescription="@string/appicon"
        app:srcCompat="@drawable/app_icon"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/appLabel"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/appLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/fitness_tracker_app_name"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/usernameNewUser"
        android:hint="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingBottom="10sp"
        android:inputType="textPersonName"
        android:layout_below="@+id/loginLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/new_user"
        android:textSize="16sp"/>

    <EditText
        android:hint="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:paddingBottom="10sp"
        android:id="@+id/passwordNewUser"
        android:layout_below="@+id/usernameNewUser"
        android:layout_alignStart="@+id/usernameNewUser"/>

    <TextView
        android:id="@+id/errorNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/run"
        android:textSize="20sp"
        tools:text="Incorrect password"
        android:layout_above="@+id/createAccountButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/create_account_button"
        android:background="#35ffffff"
        android:textColor="@android:color/background_light"/>
    />

    <EditText
        android:id="@+id/retypePasswordNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/passwordNewUser"
        android:layout_below="@+id/passwordNewUser"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"/>

</RelativeLayout>
