<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_progress_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marcin_k.gui_development.view.ProgressView"
    android:background="@drawable/bg_blue">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_is_emptyText"
        android:id="@android:id/empty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="78dp"/>

    <TextView
        android:text="@string/your_progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ListViewLabel"
        android:textSize="18sp"
        android:paddingTop="15sp"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/calorie_goal_for_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calorieGoalLabel"
        android:layout_below="@+id/ListViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"/>

    <TextView
        android:text="@string/defaultCaloriesInListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/calorieGoalLabel"
        android:layout_alignParentEnd="true"
        android:id="@+id/calorieGoalValue"/>

    <TextView
        android:paddingTop="5sp"
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="home"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>


</RelativeLayout>
